# adaptive-runtime

./: .gitignore  LICENSE  README.md  __init__.py  demo.yml  demo_record.py  pyproject.toml
.github/workflows/: ci.yml
adaptive_runtime/examples/healthcare-monitoring/: README.md  healthcare_monitoring_demo.py
adaptive_runtime/examples/manufacturing/: README.md  manufacturing_demo.py
adaptive_runtime/examples/power-grid/: README.md  power_grid_README.md  power_grid_demo.py
adaptive_runtime/examples/smart-city-iot/: README.md  smart_city_demo.py
adaptive_runtime/examples/trading-bot/: README.md  trading_bot_demo.py
core/: __init__.py  confidence_engine.py  context_engine.py  decision_engine.py  recovery_engine.py  state_engine.py
examples/: agent_demo.py  automation_demo.py  monitoring_demo.py
observability/: __init__.py  logger.py  metrics.py
runtime/: __init__.py  benchmark.py  cache.py  event_bus.py  runtime_manager.py
storage/: __init__.py  memory_store.py  sqlite_store.py
tests/: test_engines.py
